Refactor every classes